2012-02-18 Vladimir Serbinenko  <phcoder@gmail.com>

	Replace grub_checkkey with grub_getkey_noblock.

	* grub-core/kern/term.c (grub_checkkey): Replaced with ...
	(grub_getkey_noblock): ... this. All users updated.

2012-02-18 Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/console.c: Move to ...
	* grub-core/term/emu/console.c: ...here.
	(grub_ncurses_getkey): Fix return value if no key is detected.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/test.h (grub_unit_test_init): Add missing prototype.
	(grub_unit_test_fini): Likewise.
	* tests/lib/unit_test.c (main): Remove extra nested external prototype.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/test.h (GRUB_UNIT_TEST)

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/execute.c (grub_script_break): Clarify logic.
	Better error handling.
	(grub_script_return): Likewise.
	* grub-core/script/lexer.c (grub_script_lexer_yywrap): Likewise.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/libgcrypt_wrap/cipher_wrap.h (__GNU_LIBRARY__): Avoid
	rimplicit redifinition.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Internationalisation): Detail (lack of) collation in
	GRUB.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/cmdline.c (grub_cmdline_get): Don't gettext prompt.
	* grub-core/normal/main.c (grub_normal_read_line_real): Gettext
	prompt here.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c (zfs_fetch_nvlist): Mark unknown member here
	as GRUB_ERR_BUG. Don't malloc if no device is available.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/terminfo.c (grub_terminfo_output_unregister):
	Mark calling with invalid term as GRUB_ERR_BUG.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/tftp.c (tftp_receive): Silently discard too short
	packets rather than raising an error.
