@@ -151,6 +151,8 @@ noinst_PROGRAMS =
 grubconf_SCRIPTS =
 noinst_LIBRARIES =
 dist_noinst_DATA =
+platform_SCRIPTS =
+platform_PROGRAMS =
 
 TESTS =
 EXTRA_DIST =
